add error page and carcass of ShopPage(someone`s)